--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,16 @@
     --secondary-title-color: #212121;
     --accent-color: #2196F3;
 }
+p, h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+ul {
+    margin: 0;
+    padding: 0;
+}
+button {
+    cursor: pointer;
+}
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--primary-title-color);
